--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"
+<head>
+<meta charset="utf-8">
+<title>Cosmetology Spa Day</title>
+</head>
 
+<body>
+  <h1>Cosmetology Spa Day</h1>
+  <h3>Arlington Tech</h3>
+
+</body>
 </html>
