--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+  <img id="homeImage" src="images/cosmetologyBackground.jpeg">
   <h1>Cosmetology Spa Day</h1>
   <h3>Arlington Tech</h3>
 
