--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-  <img id="homeImage" src="images/cosmetologyBackground.jpeg">
+<div class="header">
   <h1>Cosmetology Spa Day</h1>
-  <br>
   <h3>Arlington Tech</h3>
+</div>
+
 
 </body>
 </html>
