adding timeline line

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <h1>Cosmetology Spa Day</h1>
   <h3>Arlington Tech</h3>
 </div>
-
+<br>
+<hr id="timeline">
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
