--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 <div class="header">
   <h1>Cosmetology Spa Day</h1>
-  <h3>Arlington Tech</h3>
+  <h3 id="title">Arlington Tech</h3>
 </div>
-<br>
+<div class="date1">
+  <h3>Breast Cancer Awareness Spa Day</h3>
+</div>
 <hr id="timeline">
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
