--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="header">
   <h1>Cosmetology Spa Day</h1>
-  <h3 id="title">Arlington Tech</h3>
+  <h3 id="subTitle">Arlington Tech</h3>
 </div>
 <div class="date1">
   <h3>Breast Cancer Awareness Spa Day</h3>
