--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h3 id="subTitle">Arlington Tech</h3>
 </div>
 <div class="date1">
-  <h3 class="calender"><br>Breast Cancer Awareness<br> Spa Day</h3>
+  <h3 class="calender">Breast Cancer Awareness<br> Spa Day<br>Oct 20, 8am-4pm</h3>
 </div>
 <hr id="timeline">
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
