add timeline place holder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <h1>Cosmetology Spa Day</h1>
   <h3 id="subTitle">Arlington Tech</h3>
 </div>
-
+<hr>
+<img id="timeline" src="images/timelineHolder.png"> 
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
