--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <h3 id="subTitle">Arlington Tech</h3>
 </div>
 <hr>
-<div id="timeline></div>
+<div id="timeline>
+  <p> </p>
+</div>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
