--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <body>
 <div class="header">
-  <h1>Cosmetology Spa Day</h1>
+  <h1>Cosmetology</h1>
   <h3 id="subTitle">Arlington Tech</h3>
 </div>
 <hr>
 <div id="timeline>
-  <p> </p>
+  
 </div>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
