--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h3 id="subTitle">Arlington Tech</h3>
 </div>
 <hr>
-<div id="timeline>
+<div id="timeline">
   
 </div>
   <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
