--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <h3 id="subTitle">Arlington Tech</h3>
 </div>
 <hr>
-<div id="timeline">
-  <br>
-</div>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<img id="timeline" src="images/timelineHolder.png">
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
