--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
   <h3 id="subTitle">Arlington Tech</h3>
 </div>
 <hr>
+<table>
+  <tr>
+    <td><a href="#options">What De Do</a></td>
+    <td><a href="#prices">Prices</a></td>
+  </tr>
+  <tr>
+    <td><a href="#teachers">Amazing Teachers</a></td>
+    <td><a href="#moreInfo">Locations & Contact</a></td>
+  </tr>
+</table>
+  
 <img id="timeline" src="images/timelineHolder.png">
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
