--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <hr>
 <table>
   <tr>
-    <td><a href="#options">What De Do</a></td>
+    <td><a href="#options">What We Do</a></td>
     <td><a href="#prices">Prices</a></td>
   </tr>
   <tr>
