headers for scroll

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <h3 id="subTitle">Arlington Tech</h3>
 </div>
 <hr>
+  
+<br>
 <table>
   <tr>
     <td><a href="#options">What We Do</a></td>
@@ -22,8 +24,26 @@
     <td><a href="#moreInfo">Locations & Contact</a></td>
   </tr>
 </table>
+<br>
   
 <img id="timeline" src="images/timelineHolder.png">
+
+<br>
+<h3 id="options"> What We Do</h3>
+<br>
+
+<br>
+<h3 id="prices"> Prices</h3>
+<br>
+
+<br>
+<h3 id="teachers">Amazing Teachers</h3>
+<br>
+
+<br>
+<h3 id="moreInfo"> Location & Contact</h3>
+<br>
+
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
