--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Cosmetology Spa Day</title>
-  <link rel="Stylesheet" href="style.css"
+  <link rel="Stylesheet" media="screen and (min-device-width: 8cm)" href="style.css"
 </head>
 
 <body>
