--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 <title>Cosmetology Spa Day</title>
   <link rel="Stylesheet" media="(min-device-width: 12cm)" href="style.css"
   <link rel="Stylesheet" media="(max-device-width: 12cm)" href="smoll.css"
+
+<script>
+function init() {
+  var loc = window.location.href;
+  var HTMLvalidLinkStr = 'http://validator.w3.org/check?uri=' + loc;
+  var CSSvalidLinkStr = 'http://jigsaw.w3.org/css-validator/validator?uri=' +
+                        loc + '?profile=css3';
+  document.getElementById("vLink1").setAttribute("href", HTMLvalidLinkStr);
+  document.getElementById("vLink2").setAttribute("href", CSSvalidLinkStr);
+}
+window.onload = init;
+</script>    
 </head>
 
 <body>
@@ -46,5 +58,13 @@
 <br>
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<footer>
+<a class=homeLinks id="vLink1">
+<strong> HTML </strong> Valid! </a> |
+<a class=homeLinks id="vLink2">
+<strong> CSS </strong> Valid! </a>
+</footer>
+  
 </body>
 </html>
