--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Cosmetology Spa Day</title>
-    <link rel="Stylesheet" media="(min-device-width: 12cm)" href="style.css"
-    <link rel="Stylesheet" media="(max-device-width: 12cm)" href="smoll.css"
+    <link rel="Stylesheet" media="(min-device-width: 12cm)" href="style.css">
+    <link rel="Stylesheet" media="(max-device-width: 12cm)" href="smoll.css">
 
     <script>
       function init() {
