--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
         <td><a href="#moreInfo">Locations & Contact</a></td>
       </tr>
     </table>
+    
     <br>
-  
-    <img id="timeline" src="images/timelineHolder.png">
+    <img id="smallTimeline" src="images/smallTimeline.png" alt="smallTimline">
+    <img id="timeline" src="images/timelineHolder.png" alt="bigTimeline">
 
     <br>
     <h3 id="options"> What We Do</h3>
