--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
     <img id="timeline" src="images/timelineHolder.png" alt="bigTimeline">
 
     <br>
-    <h3 id="options"> What We Do</h3>
+    <h3> What We Do</h3>
     <br>
-    <div class="cuts">
+    <div class="content">
       <h4>Hair Cuts & Styles</h4>
       <p>We offer hair trims, general cuts, and beard trims! Additionaly, we can do any braids or style.</p>
     </div>
-    <div class="facials">
+    <div class="content">
       <h4>Facials</h4>
       <p>We provide facials... (more content)</p>
     </div>
-    <div class="nails">
+    <div class="content">
       <h4>Manicures & Pedicures</h4>
       <p>We offer both manicures and pedicures. We trim/file, exfoliate, lotion, and paint your nails! We also have acrylics.</p>
     </div>
     
     <br>
-    <h3 id="prices"> Prices</h3>
+    <h3> Prices</h3>
     <br>
-    <div class="priceContainer">
+    <div class="content">
       <h4>Cash Only!!</h4>
       <ul>
         <li>Haircuts & Styles: 15$</li>
@@ -70,27 +70,27 @@
     </div>  
 
     <br>
-    <h3 id="teachers">Amazing Teachers</h3>
+    <h3>Amazing Teachers</h3>
     <br>
-    <div class="pContainer">
+    <div class="content">
       <h4>Ms. Peake</h4>
       <!-- <img ... -->
       <p>Ms. Peake teaches Cosmetology 1, 2, & 3</p>
     </div>
-    <div class="dContainer">
+    <div class="content">
       <h4>Ms. D</h4>
       <!-- <img ... -->
       <p>Ms. D teaches Master Barbering 1, 2, & 3</p>
     </div>
 
     <br>
-    <h3 id="moreInfo"> Location & Contact</h3>
+    <h3> Location & Contact</h3>
     <br>
-    <div class="location">
+    <div class="content">
       <h4>Location</h4>
       <p>Arlington Career Center Salon <br> 816 S. Walter Reed Drive <br> Arlington VA, 22204</p>
     </div>
-    <div class="contact">
+    <div class="content">
       <h4>Contact</h4>
       <p>School Number: (703) 228-5799</p>
     </div>
