--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
     </div>
   
     <br>
-    <table>
-      <tr>
-        <td><a href="#options">What We Do</a></td>
-        <td><a href="#prices">Prices</a></td>
-      </tr>
-      <tr>
-        <td><a href="#teachers">Amazing Teachers</a></td>
-        <td><a href="#moreInfo">Locations & Contact</a></td>
-      </tr>
-    </table>
+    <nav>
+      <table>
+        <tr>
+          <td><a href="#options">What We Do</a></td>
+          <td><a href="#prices">Prices</a></td>
+        </tr>
+        <tr>
+          <td><a href="#teachers">Amazing Teachers</a></td>
+          <td><a href="#moreInfo">Locations & Contact</a></td>
+        </tr>
+      </table>
+    </nav>
     
     <br>
     
