--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
     <br>
     <nav>
-      <table>
+      <table id="navTable">
         <tr>
           <td><a href="#options">What We Do</a></td>
           <td><a href="#prices">Prices</a></td>
