--- a/index.html
+++ b/index.html
@@ -46,30 +46,19 @@
     <br>
     <h3> What We Do</h3>
     <br>
-    <table>
-      <tr>
-        <td>
-          <div class="content">
-            <h4>Hair Cuts & Styles</h4>
-            <p>We offer hair trims, general cuts, and beard trims! Additionaly, we can do any braids or style.</p>
-          </div>
-        </td>
-        <td>
-          <div class="content">
-            <h4>Facials</h4>
-            <p>We provide facials... (more content)</p>
-          </div>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <div class="content">
-            <h4>Manicures & Pedicures</h4>
-            <p>We offer both manicures and pedicures. We trim/file, exfoliate, lotion, and paint your nails! We also have acrylics.</p>
-          </div>
-        </td>
-      </tr>
-    </table>
+
+    <div class="content" class="right">
+      <h4>Hair Cuts & Styles</h4>
+      <p>We offer hair trims, general cuts, and beard trims! Additionaly, we can do any braids or style.</p>
+    </div>
+    <div class="content" class="left">
+      <h4>Facials</h4>
+      <p>We provide facials... (more content)</p>
+    </div>
+    <div class="content" class="right">
+      <h4>Manicures & Pedicures</h4>
+      <p>We offer both manicures and pedicures. We trim/file, exfoliate, lotion, and paint your nails! We also have acrylics.</p>
+    </div>
     
     <br>
     <h3> Prices</h3>
