--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <br>
     
     <img id="timeline" src="images/timelineHolder.png" alt="bigTimeline">
-
+    <article>
     <br>
     <h3> What We Do</h3>
     <br>
@@ -108,6 +108,7 @@
       <h4>Contact</h4>
       <p>School Number: (703) 228-5799</p>
     </div>
+    </article>
     
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
