--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <br>
     <h3> What We Do</h3>
     <br>
-    <table>
+    <table id="optionTable">
       <tr>
         <td>
           <div class="content">
