--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <br>
     <h3> Prices</h3>
     <br>
-    <div class="content">
+    <div id="prices">
       <h4>Cash Only!!</h4>
       <ul>
         <li>Haircuts & Styles: 15$</li>
