--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <table id="navTable">
         <tr>
           <td><a href="#options">What We Do</a></td>
-          <td><a href="#prices">Prices</a></td>
+          <td><a href="#price">Prices</a></td>
         </tr>
         <tr>
           <td><a href="#teachers">Amazing Teachers</a></td>
@@ -44,7 +44,7 @@
     <img id="timeline" src="images/timelineHolder.png" alt="bigTimeline">
     <article>
     <br>
-    <h3> What We Do</h3>
+    <h3 id="options"> What We Do</h3>
     <br>
     <table id="optionTable">
       <tr>
@@ -66,7 +66,7 @@
     </table>
     
     <br>
-    <h3> Prices</h3>
+    <h3 id="price"> Prices</h3>
     <br>
     <div id="prices">
       <h4>Cash Only!!</h4>
@@ -78,7 +78,7 @@
     </div>  
 
     <br>
-    <h3>Amazing Teachers</h3>
+    <h3 id="teachers">Amazing Teachers</h3>
     <br>
     <div class="content">
       <h4>Ms. Peake</h4>
@@ -92,7 +92,7 @@
     </div>
 
     <br>
-    <h3> Location & Contact</h3>
+    <h3 id="moreInfo"> Location & Contact</h3>
     <br>
     <div class="content">
       <h4>Location</h4>
