change color of prices

--- a/index.html
+++ b/index.html
@@ -69,12 +69,8 @@
     <h3 id="price"> Prices</h3>
     <br>
     <div id="prices">
-      <h4>Cash Only!!</h4>
-      <ul>
-        <li>Haircuts & Styles: 15$</li>
-        <li>Facials: 15$</li>
-        <li>Manicures & Pedicures: 15$</li>
-      </ul>
+      <h4 style="color:black;">Cash Only!!</h4>
+      <p style="color:black;">Haircuts & Styles: 15$<br>Facials: 15$<br>Manicures & Pedicures: 15$</p>
     </div>  
 
     <br>
