--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <br>
     
     <picture>
-      <source media="(min-width:12cm)" srcset="timelineHolder.png">
-      <img src="smallTimeline.png" alt="timeline">
+      <source media="(min-width:12cm)" srcset="images/timelineHolder.png">
+      <img src="images/smallTimeline.png" alt="timeline">
     </picture>
     
     <article>
