--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
     <picture>
       <source media="(min-width:12cm)" srcset="images/timelineHolder.png">
-      <img src="images/smallTimeline.png" alt="timeline">
+      <img src="images/smallTimeline.png" alt="timeline" style="width:100%;height:auto;">
     </picture>
     
     <article>
