--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <br>
     
     <picture>
-      <source media="(min-width:12cm)" srcset="images/timelineHolder.png">
+      <source media="(min-width: 650px)" srcset="images/timelineHolder.png">
       <img src="images/smallTimeline.png" alt="timeline" style="width:100%;height:auto;">
     </picture>
     
