--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
 
     <br>
     <h3 id="teachers">Amazing Teachers</h3>
-    <div class="content">
-      <h4>Ms. Peake</h4>
-      <!-- <img ... -->
-      <p>Ms. Peake teaches Cosmetology 1, 2, & 3</p>
+    <div class="dContainer">
+      <img id="msD" src="msD.JPG">
+      <h4>Ms. D</h4>
+      <p>Teaches Master Barbering 1, 2, & 3</p>
     </div>
     <div class="content">
       <h4>Ms. D</h4>
       <!-- <img ... -->
-      <p>Ms. D teaches Master Barbering 1, 2, & 3</p>
+      <p>Ms. D teaches Cosmetology 1, 2, & 3</p>
     </div>
 
     <br>
