--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
     <table id="optionTable">
       <tr>
         <td>
-          <h4 style="color:#545454;">Hair Cuts & Styles</h4>
-          <p style="color:#545454;">We offer hair trims, general cuts, and beard trims! Additionaly, we can do any braids or style.</p>
+          <h4 style="color:black;">Hair Cuts & Styles</h4>
+          <p style="color:black;">We offer hair trims, general cuts, and beard trims! Additionaly, we can do any braids or style.</p>
         </td>
         <td>
-          <h4 style="color:#545454;">Facials</h4>
-          <p style="color:#545454;">We provide facials... (more content)</p>
+          <h4 style="color:black;">Facials</h4>
+          <p style="color:black;">We provide facials... (more content)</p>
         </td>
       </tr>
       <tr>
         <td>
-          <h4 style="color:#545454;">Manicures & Pedicures</h4>
-          <p style="color:#545454;">We offer both manicures and pedicures. We trim/file, exfoliate, lotion, and paint your nails! We also have acrylics.</p>
+          <h4 style="color:black;">Manicures & Pedicures</h4>
+          <p style="color:black;">We offer both manicures and pedicures. We trim/file, exfoliate, lotion, and paint your nails! We also have acrylics.</p>
         </td>
       </tr>
     </table>
@@ -72,8 +72,8 @@
     <br>
     <h3 id="price"> Prices</h3>
     <div id="prices">
-      <h4 style="color:#545454;">Cash Only!!</h4>
-      <p style="color:#545454;">Haircuts & Styles: 15$<br>Facials: 15$<br>Manicures & Pedicures: 15$</p>
+      <h4 style="color:black;">Cash Only!!</h4>
+      <p style="color:black;">Haircuts & Styles: 15$<br>Facials: 15$<br>Manicures & Pedicures: 15$</p>
     </div>  
 
     <br>
