--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </td>
         <td>
           <h4 style="color:black;">Facials</h4>
-          <p style="color:black;">We provide facials... (more content)</p>
+          <p style="color:black;">We provide general face care including lotion (depending on skin type), masks, messages, and more based on your skin.</p>
         </td>
       </tr>
       <tr>
@@ -83,10 +83,10 @@
       <h4>Ms. D</h4>
       <p>Teaches Master Barbering 1, 2, & 3</p>
     </div>
-    <div class="content">
-      <h4>Ms. D</h4>
-      <!-- <img ... -->
-      <p>Ms. D teaches Cosmetology 1, 2, & 3</p>
+    <div class="pContainer">
+      <!-- <img id="msP" src="images/msP.png" -->
+      <h4>Ms. Peake</h4>
+      <p>Teaches Cosmetology 1, 2, & 3</p>
     </div>
 
     <br>
