--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <br>
     
     <div id="timelineImg">
-      <img src="timelineHolder.png">
+      <img src="images/timelineHolder.png">
     </div>
     
     <article>
