--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <article>
     <br>
     <h3 id="options"> What We Do</h3>
+    <div class="optContainer">
     <table id="optionTable">
       <tr>
         <td>
@@ -67,7 +68,8 @@
         </td>
       </tr>
     </table>
-    
+    </div>
+      
     <br>
     <h3 id="price"> Prices</h3>
     <div id="prices">
