--- a/index.html
+++ b/index.html
@@ -53,18 +53,18 @@
     <table id="optionTable">
       <tr>
         <td>
-          <h4 style="color:black;">Hair Cuts & Styles</h4>
-          <p style="color:black;">We offer hair trims, general cuts, and beard trims! Additionaly, we can do any braids or style.</p>
+          <h4 style="color:white;">Hair Cuts & Styles</h4>
+          <p style="color:white;">We offer hair trims, general cuts, and beard trims! Additionaly, we can do any braids or style.</p>
         </td>
         <td>
-          <h4 style="color:black;">Facials</h4>
-          <p style="color:black;">We provide general face care including lotion (depending on skin type), masks, messages, and more based on your skin.</p>
+          <h4 style="color:white;">Facials</h4>
+          <p style="color:white;">We provide general face care including lotion (depending on skin type), masks, messages, and more based on your skin.</p>
         </td>
       </tr>
       <tr>
         <td>
-          <h4 style="color:black;">Manicures & Pedicures</h4>
-          <p style="color:black;">We offer both manicures and pedicures. We trim/file, exfoliate, lotion, and paint your nails! We also have acrylics.</p>
+          <h4 style="color:white;">Manicures & Pedicures</h4>
+          <p style="color:white;">We offer both manicures and pedicures. We trim/file, exfoliate, lotion, and paint your nails! We also have acrylics.</p>
         </td>
       </tr>
     </table>
