--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <p>Teaches Master Barbering 1, 2, & 3</p>
     </div>
     <div class="pContainer">
-      <!-- <img id="msP" src="images/msP.png" -->
+      <img id="msP" src="images/msP.jpeg">
       <h4>Ms. Peake</h4>
       <p>Teaches Cosmetology 1, 2, & 3</p>
     </div>
