--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
     <br>
     <h3 id="teachers">Amazing Teachers</h3>
+    <div class="teach">
     <div class="dContainer">
       <img id="msD" src="images/msD.JPG">
       <h4>Ms. D</h4>
@@ -89,7 +90,7 @@
       <h4>Ms. Peake</h4>
       <p>Teaches Cosmetology 1, 2, & 3</p>
     </div>
-
+    </div>
     <br>
     <h3 id="moreInfo"> Location & Contact</h3>
     <div class="content">
