--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
       
     <br>
     <h3 id="price"> Prices</h3>
+    <div class="priceContainer">
     <div id="prices">
       <h4 style="color:black;">Cash Only!!</h4>
       <p style="color:black;">Haircuts & Styles: 15$<br>Facials: 15$<br>Manicures & Pedicures: 15$</p>
     </div>  
-
+    </div>
+      
     <br>
     <h3 id="teachers">Amazing Teachers</h3>
     <div class="teach">
