--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <p>Teaches Master Barbering 1, 2, & 3</p>
       </div>
       <div class="pContainer">
-        <img id="msP" src="images/msP.jpeg">
+        <img id="msP" src="images/msP.jpg">
         <h4>Ms. Peake</h4>
         <p>Teaches Cosmetology 1, 2, & 3</p>
       </div>
