--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="priceContainer">
     <div id="prices">
       <h4 style="color:black;">Cash Only!!</h4>
-      <p style="color:black;">Haircuts & Styles: 15$<br>Facials: 15$<br>Manicures & Pedicures: 15$</p>
+      <p style="color:black;">Haircuts: 15$<br>Facials: 15$<br>Manicures: 15$</p>
     </div>  
     </div>
       
@@ -85,7 +85,7 @@
       <div class="dContainer">
         <img id="msD" src="images/msD.JPG">
         <h4>Ms. D</h4>
-        <p>Teaches Master Barbering 1, 2, & 3</p>
+        <p>Teaches Master Barbering/Cosmetology 1, 2, & 3</p>
       </div>
       <div class="pContainer">
         <img id="msP" src="images/msP.jpg">
