--- a/index.html
+++ b/index.html
@@ -72,19 +72,12 @@
       
     <br>
     <h3 id="price"> Prices</h3>
-    <table id="priceTable">
-      <tr>
-        <td>
-          <div class="priceContainer">
-          <div id="prices">
-          <h4 style="color:black;">Cash & Venmo</h4>
-          <p style="color:black;">Haircuts: 15$<br>Facials: 15$<br>Manicures: 15$</p>
-        </td>
-        <td>
-          <img src="images/venmo.png" alt="venmo" style="width:auto%;height:auto;">
-        </td>
-      </tr>
-    </table>
+    <div class="priceContainer">
+    <div id="prices">
+    <h4 style="color:black;">Cash & Venmo</h4>
+    <p style="color:black;">Haircuts: 15$<br>Facials: 15$<br>Manicures: 15$</p>
+
+    <img src="images/venmo.png" id="venmo" alt="venmo" style="width:auto%;height:auto;">
     </div>  
     </div>
       
