--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <h1>Cosmetology</h1>
       <h2 id="subTitle">Arlington Tech</h2>
     </div>
-  <div id="snow-container">
+  <div id="snow-container"></div>
     <br>
     <nav>
       <table id="navTable">
