--- a/index.html
+++ b/index.html
@@ -108,12 +108,13 @@
       <p>School Number: (703) 228-5799</p>
     </div>
     </article>
-    
+    <img src="images/snowman.png" id="snowman" alt="snowman">
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer>
       <a class=homeLinks id="vLink1"> <strong> HTML </strong> Valid! </a> | <a class=homeLinks id="vLink2"><strong> CSS </strong> Valid! </a>
     </footer>
+    
   <script>
     const snowContainer = document.getElementById("snow-container");
     const snowContent = ['&#10052', '&#10053', '&#10054']
