--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="priceContainer">
     <div id="prices">
     <h4 style="color:black;">Cash & Venmo</h4>
-    <p style="color:black;">Haircuts: 15$<br>Facials: 15$<br>Manicures: 15$</p>
+    <p style="color:black;">Haircuts: $15<br>Facials: $15<br>Manicures: $15<br>All chemicals and advance services require appointments</p>
     </div> 
     </div>
     <!--
