--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       
     <br>
     <h3 id="price"> Prices</h3>
-    <img src="images/venmo.png" id="venmo" alt="venmo" style="width:auto%;height:auto;">
+    <img src="images/venmo.png" id="venmo" alt="venmo">
     <div class="priceContainer">
     <div id="prices">
     <h4 style="color:black;">Cash & Venmo</h4>
