--- a/index.html
+++ b/index.html
@@ -147,5 +147,14 @@
       createSnow(30)
     });
   </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SPRX6W6PY2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SPRX6W6PY2');
+</script>
   </body>
 </html>
