--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
   <script>
     function displayForm1() {
       var text = document.getElementById("form1");
-      text.style.display = "block";
+      display = "block";
     }
     function displayForm2() {
       var text = document.getElementById("form2");
-      text.style.display = "block";
+      display = "block";
     }
     const snowContainer = document.getElementById("snow-container");
     const snowContent = ['&#10052', '&#10053', '&#10054']
