--- a/index.html
+++ b/index.html
@@ -130,12 +130,10 @@
     
   <script>
     function displayForm1() {
-      var text = document.getElementById("form1");
-      display = "block";
+      document.getElementById("form1").style.display = "block";
     }
     function displayForm2() {
-      var text = document.getElementById("form2");
-      display = "block";
+      document.getElementById("form2").style.display = "block";
     }
     const snowContainer = document.getElementById("snow-container");
     const snowContent = ['&#10052', '&#10053', '&#10054']
