--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
     </div>
 
     <h3> Make an Appointment!</h3>
-    <button onclick="displayText()">Make an appointment for Spa Day</button>
+    <button onclick="displayForm1()">Make an appointment for Spa Day</button>
     <div id="form1" style="display: none;">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfFph0xiEReFSb-bmuo__ZCzXdpQ2eerUd0j0ZnMxmnoXQH-Q/viewform?embedded=true" width="640" height="1767" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
 
-    <button onclick="displayText()">Make a general appointment (not for Spa Day)</button>
+    <button onclick="displayForm2()">Make a general appointment (not for Spa Day)</button>
     <div id="form2" style="display: none;">
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeTt8UligAT3Racm4IjrZT16XG9p_XZ3yV2jtNt86tY8qyxdw/viewform?embedded=true" width="640" height="1783" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
