--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
     <!--  Snowman
     <img src="images/snowman.png" id="snowman" alt="snowman"> 
     -->
+    <img src="images/hearts.png" id="snowman" alt="hearts"> 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer>
